# sinkd

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  READ_me.md  bump.toml  docker-compose.yml  etc_sinkd.conf  justfile  login.php  mosquitto.conf  overview.md  shell.nix  sinkd.conf  sinkd.py  ssl.ps1  tasks.py  test_sinkd.py  usecase.md  windows_env.ps1
.cargo/: config.toml
.config/: Cargo.toml
.github/workflows/: ci.yml  merge.yml  release.yml
RnD/: overview.md
anchor/: Cargo.toml
anchor/src/: main.rs
barge/: Cargo.toml
barge/src/: main.rs
cfg/: etc_sinkd.conf  sinkd.conf
cfg/etc/firewalld/services/: mosquitto.xml
cfg/etc/sinkd/: mosquitto.conf
cfg/opt/sinkd/: sinkd.conf
cfg/scenario/: bravo.conf  charlie-user.conf  charlie.conf
cfg/templates/: sinkd.system.conf.tmpl  sinkd.user.conf.tmpl
cfg/user/: sinkd.conf
client/: Cargo.toml  conf.tmpl
client/src/: cli.rs  client.rs  cmd.rs  daemon.rs  init.rs  main.rs  parameters.rs  params.rs  sync_state.rs
core/: Cargo.toml
core/src/: config.rs  fancy.rs  init.rs  lib.rs  parameters.rs  rsync.rs  shiplog.rs  test_hooks.rs  time.rs
core/src/ipc/: mod.rs  windows.rs
core/src/unused/: timestamp.c
daemon/: Cargo.toml  sinkd.py
daemon/src/: lib.rs  main.rs
deploy/: deploy.yaml  sinkd.conf
docker/: Dockerfile  compose.yml  perms.sh
fortress/: db.sqlite3
fortress/fortress/: settings.py  urls.py
fortress/polls/: models.py  views.py
fortress/polls/migrations/: 0001_initial.py
harbor/: Cargo.toml  README.md
leyline/: Cargo.toml
leyline/examples/: point_to_point.rs
leyline/src/: lib.rs  main.rs
main/: change_display.php
notes/: cli.md  daemon-mode.md  deps.md  drawingboard.md  gui_reqs.md  ipc.md  mvp.md  openssh-changelog.txt  packaging.md  protocol.md  roadmap.md  rsync-man.txt  rsync.conf.txt  rustflags.txt  setup-ssh.md  todo.md
notes/rsync/: rsyncd.conf.txt
pkg/: Dockerfile
pkg/arch/: create.sh
pkg/debian/: create.sh
pkg/homebrew/: sinkd.rb
pkg/windows/: create.ps1
scenario/: Cargo.toml  etc_sinkd.conf  sinkd.conf  sinkd.py
scenario/compose/: Dockerfile  compose.yml  entrypoint.sh  snapshot.sh
scenario/scripts/: behind_pull_conflict_backup.sh  cli_smoke.sh  compose.sh  multi_client_interleave.sh  sinkd_generation_smoke.sh
scenario/specs/: behind_pull_conflict_backup.toml  cli_smoke.toml  compose.toml  distributed_edge.toml  local_smoke.toml  multi_client_interleave.toml  sinkd_generation_smoke.toml
scenario/src/: env.rs  event.rs  main.rs  report.rs  runner.rs  spec.rs
script/: sinkd.py
scripts/: alpha-capture.sh  bravo-scenario.sh  charlie-scenario.sh  release.sh
server/: Cargo.toml  conf.tmpl
server/src/: cli.rs  daemon.rs  generation.rs  init.rs  main.rs  parameters.rs  server.rs
sinkd/: Cargo.toml
sinkd/cfg/scenario/: alpha-user.conf  alpha.conf  bravo-user.conf
sinkd/src/: client.rs  config.rs  ipc.rs  main.rs  ops.rs  outcome.rs  parameters.rs  rsync.rs  server.rs  shiplog.rs  time.rs
sinkd/src/ipc/: mod.rs  mqtt.rs  windows.rs
sinkd/src/unused/: unused.rs
src/: __ipc.rs  barge.rs  build.rs  cli.rs  client.rs  config.rs  conflict.rs  daemon.rs  defs.rs  fancy.rs  flags.rs  harbor.rs  hawser.rs  info.rs  init.rs  io.rs  ipc.rs  lib.rs  main.rs  mosq.c  mqtt.rs  ops.rs  outcome.rs  parameters.rs  protocol.rs  rigging.rs  ropework.rs  rsync.rs  server.rs  setup.rs  shiplog.rs  sinkd-rig.sh  sinkd.rs  ssh_config.md  tab_completion.rs  test.rs  time.rs  timestamp.c  tradewind.rs  unused.rs  (+1 more)
src/cli/: build.rs  client.rs  common.rs  dispatch.rs  init.rs  mod.rs  server.rs
src/daemon/: barge.rs  harbor.rs  mod.rs
src/ipc/: dds.rs  mod.rs  mqtt.rs  unix.rs  windows.rs  zenoh.rs
src/unused/: timestamp.c
test/: etc_sinkd.conf  sinkd-rig.sh  sinkd.conf  sinkd.py  test_sinkd.py
test/client/: etc_sinkd.conf  sinkd.conf
test/server/: etc_sinkd.conf
web/: README.md  db.php  login.php  main.php
web/main/: change_pass.php  delete_account.php
