[workspace]
resolver = "2"
members = ["core", "client", "server", "scenario"]

[workspace.dependencies]
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4", features = ["derive"] }
bincode = "1"
zenoh = "1.7.2"

[workspace.lints.clippy]
perf = "warn"
pedantic = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"

[profile.release]
strip = true
lto = true
opt-level = 2
panic = "abort"
codegen-units = 1
