[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
# main.rs is needed to test this as cargo test is parallel
exclude = [ "src/main.rs" ] 

[dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
] }