[package]
name = "leyline"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
# Replace lazy_static with std::sync::LazyLock (Rust 2024 feature)
# lazy_static = "1.4"  # Commented out - using std::sync::LazyLock instead
