[package]
name = "sinkd-srv"
version = "0.0.4+5bedf12"
authors = ["Tony <krakjn@gmail.com>"]
edition = "2021"

[[bin]]
name = "sinkd-srv"
path = "src/main.rs"

[dependencies]
sinkd-core = { path = "../core" }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
signal-hook = "0.3"
toml = { workspace = true }
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[lints]
workspace = true
