[package]
name = "sinkd"
version = "0.1.0"
authors = ["Tony <krakjn@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "1"
chrono = "0.4"
clap = "4"
crossbeam = "0.8"
hostname = "0.4.0"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
nix = { version = "0.28", features = ["process", "signal"] }
notify = "4.0"
paho-mqtt = { version = "0.12", features = ["vendored-ssl"] }  # build ssl
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
toml = "0.8"


[dev-dependencies]
async-std = "1"
futures-util = "0.3"

# [build-dependencies]
# cc = { version = "1" }

